--- a/.github/workflows/inductor-perf-test-nightly-x86.yml
+++ b/.github/workflows/inductor-perf-test-nightly-x86.yml
@@ -52,21 +52,21 @@ concurrency:
 
 permissions: read-all
 
-jobs:
-  get-label-type:
-    name: get-label-type
-    uses: pytorch/pytorch/.github/workflows/_runner-determinator.yml@main
-    with:
-      triggering_actor: ${{ github.triggering_actor }}
-      issue_owner: ${{ github.event.pull_request.user.login || github.event.issue.user.login }}
-      curr_branch: ${{ github.head_ref || github.ref_name }}
-      curr_ref_type: ${{ github.ref_type }}
-      opt_out_experiments: lf
+# jobs:
+#   get-label-type:
+#     name: get-label-type
+#     uses: pytorch/pytorch/.github/workflows/_runner-determinator.yml@main
+#     with:
+#       triggering_actor: ${{ github.triggering_actor }}
+#       issue_owner: ${{ github.event.pull_request.user.login || github.event.issue.user.login }}
+#       curr_branch: ${{ github.head_ref || github.ref_name }}
+#       curr_ref_type: ${{ github.ref_type }}
+#       opt_out_experiments: lf
 
   linux-jammy-cpu-py3_9-gcc11-inductor-build:
     name: linux-jammy-cpu-py3.9-gcc11-inductor
     uses: ./.github/workflows/_linux-build.yml
-    needs: get-label-type
+    # needs: get-label-type
     with:
       runner_prefix: "${{ needs.get-label-type.outputs.label-type }}"
       build-environment: linux-jammy-py3.9-gcc11-build
@@ -92,7 +92,7 @@ jobs:
   linux-jammy-cpu-py3_9-gcc11-inductor-build-amd:
     name: linux-jammy-cpu-py3.9-gcc11-inductor-amd
     uses: ./.github/workflows/_linux-build.yml
-    needs: get-label-type
+    # needs: get-label-type
     with:
       runner_prefix: "${{ needs.get-label-type.outputs.label-type }}"
       build-environment: linux-jammy-py3.9-gcc11-build
