Add AMD AWS runners to inductor performance tests

--- a/.github/workflows/inductor-perf-test-nightly-x86.yml
+++ b/.github/workflows/inductor-perf-test-nightly-x86.yml
@@ -52,7 +52,7 @@ concurrency:
 
 permissions: read-all
 
-# jobs:
+jobs:
 #   get-label-type:
 #     name: get-label-type
 #     uses: pytorch/pytorch/.github/workflows/_runner-determinator.yml@main
